# printr-mcp

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  INSTALL.md  README.md  biome.json  package.json  release-please-config.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  release-please.yml
.husky/: commit-msg
docs/: consumer-integration-analysis.md  deployment-wallet-recovery-design.md
examples/: README.md
examples/mcp-client/: index.ts  package.json
examples/sdk-basic/: index.ts  package.json
rust-sniper-engine/: Cargo.toml
rust-sniper-engine/src/: main.rs
rust-sniper-engine/src/commands/: command.rs
rust-sniper-engine/src/engine/: engine.rs  error.rs  event_bus.rs  executor.rs  mod.rs  state.rs
rust-sniper-engine/src/models/: events.rs  mod.rs  order.rs  token.rs  trade.rs
rust-sniper-engine/src/settings/: settings.rs
rust-sniper-engine/src/strategies/: basic_sniper.rs  mod.rs  strategy.rs
scripts/: generate-api.sh
